--- a/app/assets/stylesheets/profile_page.scss
+++ b/app/assets/stylesheets/profile_page.scss
@@ -7,6 +7,8 @@
     color: red;
     font-family: 'Bebas Neue', cursive;
     font-size: 50px;
+    background-color: black;
+    margin: 0;
 }
 
 .profiles-header {
