--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -18,12 +18,15 @@
     padding: 20px;
     width: 80%;
     font-weight: 400;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 8px;
+    margin: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .top-greeting-box {
