--- a/app/assets/stylesheets/small_videos.scss
+++ b/app/assets/stylesheets/small_videos.scss
@@ -7,11 +7,12 @@
     height: 150px;
     width: 250px;
     margin: 10px;
+    border-radius: 10px;
 }
 
 .big-video-image {
-    height: 225px;
-    width: 400px;
+    height: 350px;
+    width: 425px;
     z-index: 1;
 }
 .button-list {
