--- a/app/assets/stylesheets/main_video_page.scss
+++ b/app/assets/stylesheets/main_video_page.scss
@@ -9,7 +9,7 @@
 .content {
   position: absolute;
   top: 40%;
-  background: rgba(0, 0, 0, 0.5);
+  background-color:	transparent;
   color: #f1f1f1;
   width: 100%;
   padding: 20px;
