--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
       <meta property="og:description"
        content="A streaming service where you can any TV show or movie related to superheroes."
      />
+      <meta property="og:url"
+       content="https://hero-flix.herokuapp.com/"
+     />
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
