added img to meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta property="og:title" content="Heroflix" />
-     <meta property='og:image' content="<%= image_url('https://gyazo.com/fe72e2245b71f5a8468637f45a7542d1') %>"/>
+     <meta property='og:image' content="<%= image_url('heroflix.png') %>"/>
       <meta property="og:description"
        content="A streaming service where you can any TV show or movie related to superheroes."
      />
