--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Netflix</title>
+    <title>Heroflix</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta property="og:title" content="Heroflix" />
-     <meta property='og:image' content="<%= image_url('heroflix.png') %>"/>
+     
       <meta property="og:description"
        content="A streaming service where you can any TV show or movie related to superheroes."
      />
