--- a/app/assets/stylesheets/video_show_page.scss
+++ b/app/assets/stylesheets/video_show_page.scss
@@ -1,9 +1,20 @@
+
+
 .show-video {
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
+    margin: 0;
+    min-width: 100%;
+    position: relative;
+    right: 0;
+    top: 0;
+
 }
 
-show-video-container {
-    height: 100%;
-    margin: 0;
+.show-video-title {
+  position: absolute;
+  top: 0%;
+  background-color: transparent;
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
 }
