added signup page styles

--- a/app/assets/stylesheets/signup_page.scss
+++ b/app/assets/stylesheets/signup_page.scss
@@ -24,8 +24,23 @@
 
 .signup-big-text {
     font-weight: 900;
+    margin: 0px;
+    margin-bottom: 3px;
+}
+.first-sign-up {
+    margin-top: 20px;
 }
 
 .email-text {
     font-weight: bold;
+    margin-top: 2px;
+}
+
+.email-text-title {
+    margin-bottom: 0px;
+}
+
+.signup-input {
+    height: 40px;
+    margin-bottom: 20px;
 }
