--- a/app/assets/stylesheets/main_video_page.scss
+++ b/app/assets/stylesheets/main_video_page.scss
@@ -43,3 +43,15 @@
   font-size: 16px;
   
 }
+
+.link-icon {
+  margin-top: 14px;
+}
+
+.linked {
+  margin-right: 40px; 
+}
+
+.github {
+  margin-left: 40px;
+}
