--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -1,3 +1,6 @@
+body {
+    margin: 0;
+}
 .login-bar {
     display: flex;
     justify-content: space-between;
@@ -16,7 +19,7 @@
     text-decoration: none;
     height: 20%;
     padding: 20px;
-    width: 80%;
+    width: 60%;
     font-weight: 400;
     padding-top: 8px;
     padding-bottom: 8px;
@@ -27,6 +30,7 @@
     margin: 10px;
     margin-top: 15px;
     margin-bottom: 15px;
+    margin-right: 100px;
 }
 
 .top-greeting-box {
@@ -54,4 +58,8 @@
 .sign-in-demo {
     display: flex;
     flex-direction: column;
+}
+
+.greeting-left {
+    margin-left: 20px;
 }
