--- a/app/assets/stylesheets/video_show_page.scss
+++ b/app/assets/stylesheets/video_show_page.scss
@@ -1,19 +1,32 @@
 
 
 .show-video {
-    min-height: 100%;
+  //   min-height: 100%;
+  //   margin: 0;
+  //   min-width: 100%;
+  //   position: relative;
+  //   right: 0;
+  //   top: 10%;
+  // background-color: black;
+  position: fixed;
+  top:0;
+  left:0;
+      right: 0;
+    bottom: 0;
     margin: 0;
-    min-width: 100%;
-    position: relative;
-    right: 0;
-    top: 0;
-  background-color: black;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background-color: black;
 }
 
-
+.height-div {
+  height: 10%;
+}
 .show-video-title {
   position: absolute;
-  top: 0%;
+  top: 10%;
   background-color: transparent;
   color: #f1f1f1;
   width: 100%;
