added myList and search bar html

--- a/app/assets/stylesheets/main_video_page.scss
+++ b/app/assets/stylesheets/main_video_page.scss
@@ -61,3 +61,14 @@
   display: flex; 
   align-items: center;
 }
+
+.nav-bar-link{
+  margin-left: 10px; 
+  margin-right: 10px;
+}
+.search-bar {
+  border: 1px solid white; 
+  color: white; 
+  background-color: transparent;
+  height: 30px;
+}
