fixed margins and sizings on buttons and videos

--- a/app/assets/stylesheets/main_video_page.scss
+++ b/app/assets/stylesheets/main_video_page.scss
@@ -12,8 +12,8 @@
   background-color:	transparent;
   color: #f1f1f1;
   width: 80%;
-  padding: 20px;
   margin-bottom: 20%;
+  left: 3%;
 }
 
 .big-video-title {
