--- a/app/assets/stylesheets/profile_page.scss
+++ b/app/assets/stylesheets/profile_page.scss
@@ -56,3 +56,13 @@
 .who-watch {
     font-size: 50px;
 }
+
+.my-list-link:visited {
+    text-decoration: none;
+    color: white; 
+}
+
+.my-list-link:visited {
+    text-decoration: none;
+    color: white;
+}
