--- a/app/assets/stylesheets/profile_show.scss
+++ b/app/assets/stylesheets/profile_show.scss
@@ -1,7 +1,8 @@
 .profile-show {
     background-color: black;
     color: white; 
-    height: 2500px;
+    position: absolute; 
+    height: 100%;
     margin: 0;
     width: 100%;
 }
