--- a/app/assets/stylesheets/signup_page.scss
+++ b/app/assets/stylesheets/signup_page.scss
@@ -7,8 +7,11 @@
 
 .login-text-link {
     color: gray;
+    width: 5%;
 }
-
+.sign-in-text-sign {
+    margin-right: 2%;
+}
 .loginNetflix {
     padding-left: 20px;
 }
@@ -65,3 +68,4 @@
     padding-right: 0;
     padding-left: 0;
 }
+
