--- a/app/assets/stylesheets/carousel_video.scss
+++ b/app/assets/stylesheets/carousel_video.scss
@@ -1,6 +1,9 @@
 .carousel-row {
     display: flex;
-    padding: 0 30px; 
+    padding: 0; 
+    width: 100%;
+    height: 20%;
+    background: black;
 }
 
 .right-button-click {
