--- a/app/assets/stylesheets/small_videos.scss
+++ b/app/assets/stylesheets/small_videos.scss
@@ -4,20 +4,27 @@
     // background-color: black;
     // margin-right: 10px;
     background-color: black;
-    flex: 0 0 19.7%;
-    margin: 0 2px;
+    // flex: 0 0 19.7%;
+    margin-right: .5%;
+    margin-bottom: 5%;
     transition: transform 300ms ease 100ms;
-    height: 175px;
-    width: 175px;
+    height: 20%;
+    width: 15%;
+    
 }
 .video-image {
-    width: 175px; 
-    height: 175px;
-    // margin: 10px;
-    border-radius: 10px;
-    flex: 0 0 19.7%;
-    margin: 0 2px;
+    // object-fit: contain;
+    // // margin: 10px;
+    // border-radius: 10px;
+    // flex: 0 0 19.7%;
+    // margin: 0 2px;
     transition: transform 300ms ease 100ms;
+    // display: none;
+    width: 100%;
+    // max-height: 100%;
+    // min-height: 50%;
+    height: 200px;
+    
     
 }
 
@@ -29,9 +36,9 @@
     margin: 0;
     padding: 0;
 }
-.big-box:hover .big-box {
-    transform: translateX(-20%);
-}
+// .big-box:hover .big-box {
+//     transform: translateX(-20%);
+// }
 
 
 .video-cont {
@@ -89,11 +96,16 @@
 .carousel-row {
     display: flex;
     margin-bottom: 30px;
+    // align-items: center;
 }
 
 .carousel-whole {
     margin-top: 3%;
     background-color: black;
-    width: 75%;
+    // width: 100%;
     margin-left: 3%;
+}
+
+.carousel-whole-parent {
+    background: black;
 }
