fixed size of splash page sections

--- a/app/assets/stylesheets/download_header.scss
+++ b/app/assets/stylesheets/download_header.scss
@@ -1,11 +1,12 @@
 .download {
     border-top: 5px solid gray;
-    padding-top: 50px;
-    height: 500px;
+    padding-top: 3%;
+    
     background-color: black;
     color: white;
     display: flex; 
     justify-content: center;
+    padding-bottom: 3%;
 }
 
 .download-image {
