--- a/app/assets/stylesheets/tv_header.scss
+++ b/app/assets/stylesheets/tv_header.scss
@@ -1,11 +1,12 @@
 .tv {
-    padding-top: 50px;
+    padding-top: 3%;
     border-top: 5px solid gray;
     background-color: black;
     color:white;
     display: flex;
     justify-content: center;
-    height: 500px;
+    height: 25%;
+    padding-bottom: 3%;
 }
 
 .tv-text {
