--- a/app/assets/stylesheets/watch.scss
+++ b/app/assets/stylesheets/watch.scss
@@ -1,10 +1,10 @@
 .watch {
     border-top: 5px solid gray;
-    padding-top: 50px;
+    padding-top: 3%;
     background: black;
     display: flex; 
     justify-content: center;
-    height: 500px;
+    padding-bottom: 3%;
 }
 
 .watch-text {
