--- a/app/assets/stylesheets/my-list-cont.scss
+++ b/app/assets/stylesheets/my-list-cont.scss
@@ -1,6 +1,6 @@
 .my-list-cont {
     // background: #141414;
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Roboto', sans-serif;
     background: black;
     color: #fff;
     height: 100%;
