--- a/app/assets/stylesheets/small_videos.scss
+++ b/app/assets/stylesheets/small_videos.scss
@@ -10,21 +10,23 @@
     transition: transform 300ms ease 100ms;
     height: 20%;
     width: 15%;
+    min-height: 220px;
+    
     
 }
 .video-image {
-    object-fit: fill;
+    // object-fit: fill;
     // // margin: 10px;
     border-radius: 5px;
     // flex: 0 0 19.7%;
     // margin: 0 2px;
     transition: transform 300ms ease 100ms;
-    // display: none;
     width: 100%;
-    // max-height: 100%;
-    // min-height: 50%;
-    height: 200px;
+    max-height: 220px;
+    min-height: 220px;
+    height: 100%;
     
+    // object-fit: cover;
     
 }
 
@@ -117,4 +119,5 @@
 
 .carousel-whole-parent {
     background: black;
+   
 }
