removed white spots

--- a/app/assets/stylesheets/small_videos.scss
+++ b/app/assets/stylesheets/small_videos.scss
@@ -114,12 +114,12 @@
 }
 .carousel-row {
     display: flex;
-    margin-bottom: 30px;
+    background-color: black;
     // align-items: center;
 }
 
 .carousel-whole {
-    margin-top: 3%;
+    padding-top: 1%;
     background-color: black;
     margin-left: 4%;
 }
