--- a/app/assets/stylesheets/main_video_page.scss
+++ b/app/assets/stylesheets/main_video_page.scss
@@ -72,11 +72,27 @@
   background-color: transparent;
   margin-left: 5px; 
   outline: none;
+  display: none;
 }
 
 .search-div-bar {
-  border: 1px solid white; 
+  border: 0;
   display: flex; 
   align-items: center;
-  height: 20px;
+  height: 25px;
+  width: 25px;
+  transition: width .3s;
+}
+
+
+
+.search-div-bar:hover {
+  border: 1px solid white; 
+  width: 160px; 
+  transition: width .3s;
+}
+
+.search-div-bar:hover .search-bar {
+  display: block;
+  transition-delay: display .3;
 }
