changed carousel styles

--- a/app/assets/stylesheets/main_video_page.scss
+++ b/app/assets/stylesheets/main_video_page.scss
@@ -8,7 +8,7 @@
 
 .content {
   position: absolute;
-  top: 15%;
+  top: 10%;
   background-color:	transparent;
   color: #f1f1f1;
   width: 80%;
@@ -17,12 +17,14 @@
 }
 
 .big-video-title {
-  width: 30%;
-  font-size: 250%;
+  width: 37%;
+  font-size: 200%;
+  margin-bottom: 3%;
 }
 .big-video-desc {
-  width: 30%;
-  font-size: 125%;
+  width: 37%;
+  font-size: 100%;
+  margin-bottom: 3%;
 }
 
 .play-vid-button {
