--- a/app/assets/stylesheets/small_videos.scss
+++ b/app/assets/stylesheets/small_videos.scss
@@ -10,7 +10,7 @@
     transition: transform 300ms ease 100ms;
     height: 20%;
     width: 15%;
-    min-height: 220px;
+    max-height: 150px;
     
     
 }
@@ -22,19 +22,19 @@
     // margin: 0 2px;
     transition: transform 300ms ease 100ms;
     width: 100%;
-    max-height: 220px;
-    min-height: 220px;
+    max-height: 150px;
+    min-height: 150px;
     height: 100%;
 
     // object-fit: cover;
-    
+    // display: none;
 }
 
 .big-video-image {
     display: none;
     height: 100%;
     width: 100%;
-    min-height: 200px;
+    max-height: 120px;
     margin: 0;
     padding: 0;
 }
@@ -43,11 +43,12 @@
 }
 
 .big-video-image {
+    height: 120px;
     display: none;
 }
 .video-cont {
     display: none;
-    min-height: 200px;
+    height: 160px;
 }
 
 .big-box:hover {
@@ -68,7 +69,7 @@
     flex-direction: column;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    min-height: 170px;
+    min-height: 150px;
     
 }
 
@@ -78,7 +79,7 @@
     z-index: 1;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    height: 80%;
+    height: 100%;
 }
 
 
@@ -102,7 +103,7 @@
 .button-list {
     background-color: 	rgb(48,48,48);
     height: 20%;
-    min-height: 80px;
+    min-height: 40px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -172,9 +173,10 @@
 
 .right-buttons:hover .my-list-hover {
     visibility: visible;
-    bottom: 30px;
+    bottom: 18px;
     opacity: 1;
     transition: opacity .5s linear;
+    right: .5px;
 }
 
 .right-buttons {
@@ -182,4 +184,8 @@
     margin-top: 2%;
     position: relative;
     
+}
+
+.genres-text {
+    margin: 0;
 }
