fixed search bar styles

--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -34,16 +34,16 @@ body {
 }
 
 .top-greeting-box {
-    height: 700px;
+    padding-bottom: 5%;
     background-image: url('https://mppmduse2pmpovwapp.azurewebsites.net/wp-content/uploads/2019/09/netflix-background-9.jpg');
 }
 
 .greeting-header {
-    font-size: 60px;
+    font-size: 350%;
 }
 
 .greeting-text-div {
-    width: 35%;
+    width: 40%;
 }
 
 .greeting-subtext1 {
