added profile show page effects

--- a/app/assets/stylesheets/profile_show.scss
+++ b/app/assets/stylesheets/profile_show.scss
@@ -125,3 +125,22 @@ a {
 .search-show {
     padding-top: 10%;
 }
+
+.add-profile-cont-whole:hover .button-div {
+    border: 4px solid white;
+}
+ .add-profile-cont-whole:hover .profile-name-text-show {
+     color: white;
+ }
+
+ .add-button-container:hover .add-prof-button {
+     color: white; 
+ }
+
+#add-profile-icon {
+        padding-left: 15%;
+    padding-right: 15%;
+}
+.add-button-container:hover #add-profile-icon {
+    background-color: white;
+}
