--- a/app/assets/stylesheets/profile_show.scss
+++ b/app/assets/stylesheets/profile_show.scss
@@ -144,3 +144,7 @@ a {
 .add-button-container:hover #add-profile-icon {
     background-color: white;
 }
+
+#nav-bar-down {
+    margin-left: 5px;
+}
