--- a/app/assets/stylesheets/carousel_video.scss
+++ b/app/assets/stylesheets/carousel_video.scss
@@ -1,10 +1,11 @@
 .carousel-row {
     display: flex;
     padding: 0; 
-    width: 100%;
+    width: 95%;
     height: 20%;
     background: black;
     margin: 0;
+    overflow: hidden;
 }
 
 .right-button-click {
