added meta data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <meta property="og:url"
        content="https://hero-flix.herokuapp.com/"
      />
+     <meta property="og:image" content="<%= image_url('heroflix.jpg') %>" />
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
