changed show page dimensions

--- a/app/assets/stylesheets/profile_page.scss
+++ b/app/assets/stylesheets/profile_page.scss
@@ -37,8 +37,8 @@
     text-decoration: none;
 }
 .button-div {
-    height: 200px;
-    width: 200px;
+    height: 80%;
+    width: 90%;
 }
 .add-button-container {
     display: flex;
