--- a/app/assets/stylesheets/profile_show.scss
+++ b/app/assets/stylesheets/profile_show.scss
@@ -127,8 +127,15 @@ a {
     padding-top: 10%;
 }
 
+.add-profile-cont-whole {
+       width: 15%;
+    height: 20%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
 .add-profile-cont-whole:hover .button-div {
     border: 4px solid white;
+ 
 }
  .add-profile-cont-whole:hover .profile-name-text-show {
      color: white;
